--- a/index.html
+++ b/index.html
@@ -5,10 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore Git And GItHub</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
-<body>
 
+<body>
+    <!-- header-area start  -->
+    <header class="header-area">
+        <h2>Explore Git and Github Today</h2>
+    </header>
+    <div class="main">
+        <!-- Blog-area-start -->
+        <div class="blog-area">
+            <div class="blog-item">
+                <h3>What is Git?</h3>
+                <p>Git is a distributed version control system that allows multiple developers to work on a project
+                    simultaneously without interfering with each other's changes.</p>
+            </div>
+            <div class="blog-item">
+                <h3>What is GitHub?</h3>
+                <p>GitHub is a web-based platform that uses Git for version control and collaboration, allowing
+                    developers
+                    to host and review code, manage projects, and build software together.</p>
+            </div>
+            <div class="blog-item">
+                <h3>Why Use Git and GitHub?</h3>
+                <p>Using Git and GitHub helps in tracking changes, collaborating with others, and maintaining a history
+                    of
+                    the project, making it easier to manage software development.</p>
+            </div>
+        </div>
 </body>
 
 </html>
