--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
                 <h3>What is Git?</h3>
                 <p>Git is a distributed version control system that allows multiple developers to work on a project
                     simultaneously without interfering with each other's changes.</p>
+                <img src="img/pexels-philippedonn-1133957 (1).jpg" alt="" width="100" height="100">
             </div>
             <div class="blog-item">
                 <h3>What is GitHub?</h3>
                 <p>GitHub is a web-based platform that uses Git for version control and collaboration, allowing
                     developers
                     to host and review code, manage projects, and build software together.</p>
+                <img src="img/pexels-philippedonn-1133957.jpg" alt="" w1idth="100" height="100">
             </div>
             <div class="blog-item">
                 <h3>Why Use Git and GitHub?</h3>
